fixed header z-index order

--- a/public/scss/template-parts/header.scss
+++ b/public/scss/template-parts/header.scss
@@ -2,7 +2,7 @@
     background-color: $light;
     padding: fluid(20, 30) 0;
     position: fixed;
-    z-index: 2;
+    z-index: 99;
     width: 100%;
 
     @include media('<phone-medium') {
